Изменены возможные области видимости для записей
