# demo/src/main/kotlin/com/example/demo/controller/EntryController.kt
@@ -6,6 +6,7 @@ import org.springframework.http.ResponseEntity
 import org.springframework.web.bind.annotation.*
 import com.example.demo.repositories.EntryRepository
 import com.example.demo.models.Entry
+import com.example.demo.models.Visibility
 
 @RestController
 @CrossOrigin(origins=["http://localhost:3000"])
@@ -22,11 +23,11 @@ class EntryController(@Autowired private val entryRepository: EntryRepository) {
 
     @GetMapping("/public")
     fun getAllPublicEntries():List<Entry> = 
-        entryRepository.findByPublicAndModerated(true,true).toList()
+        entryRepository.findByVisibilityAndModerated(Visibility.public,true).toList()
 
     @GetMapping("/formoderation")
     fun getUnmoderatedEntries():List<Entry> = 
-        entryRepository.findByPublicAndModerated(true, false).toList()
+        entryRepository.findByVisibilityAndModerated(Visibility.public, false).toList()
 
     @PostMapping("")
     fun createEntry(@RequestBody entry: Entry): ResponseEntity<Entry> {
@@ -51,7 +52,7 @@ class EntryController(@Autowired private val entryRepository: EntryRepository) {
         }
 
         val updatedEntry = existingEntry.copy(iduser = entry.iduser, posted = entry.posted, 
-            content = entry.content, moderated = entry.moderated, public = entry.public, 
+            content = entry.content, moderated = entry.moderated, visibility = entry.visibility, 
             topics = entry.topics)
         entryRepository.save(updatedEntry)
         return ResponseEntity(updatedEntry, HttpStatus.OK)
